api-builder/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: test-ops-microservices
spec:
  selector:
    app: nginx
  ports:
    - name: web
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
