api-builder/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: test-ops-microservices
spec:
  rules:
    - host: api-builder.localhost.com
      http:
        paths:
        - path: /build
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 8081
